# photobank

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  RELEASING.md  dump.rdb  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
drizzle/: 0000_lowly_rogue.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
scripts/: generate-icon.mjs
src/: App.tsx  globals.css  main.tsx  proxy.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  error.rs  exif.rs  import.rs  keys.rs  main.rs  manifest.rs  photos.rs  pipeline.rs  protocol.rs  refresh.rs  settings.rs
src/__tests__/: auth.test.ts  bulk-tag-dialog.test.tsx  command-palette-updates.test.tsx  command-palette.test.tsx  export-button.test.tsx  fixtures.ts  folder-list.test.tsx  folder-page.test.tsx  folder-title.test.tsx  grid-navigation.test.ts  header.test.tsx  image-url.test.ts  keys.test.ts  photo-grid.test.tsx  photo-lightbox.test.tsx  photo-sort.test.ts  photo-tags.test.tsx  process-image.test.ts  search-bar.test.tsx  search-query.test.ts  search-results.test.tsx  selection-check.test.tsx  settings-appearance.test.tsx  settings-refresh.test.tsx  settings-storage-fold.test.tsx  settings-updates.test.tsx  setup.ts  sort-dropdown.test.tsx  tag-input.test.tsx  tag-list.test.tsx  theme.test.tsx  update-flow.test.tsx  update-provider.test.tsx  upload-dropzone.test.tsx  upload-provider.test.tsx  use-photo-actions.test.ts  use-photo-actions.test.tsx  (+3 more)
src/lib/: api.ts  (+15 more)
(+65 files in other folders)
