[package]
name = "photobank"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"
percent-encoding = "2"
image = "0.25"
fast_image_resize = "5"
webp = "0.3"
img-parts = "0.3"
kamadak-exif = "0.6"

[dev-dependencies]
# Constructing SdkError/HttpResponse values in manifest tests
aws-smithy-runtime-api = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
